# codecrafters-shell-rust

./: Cargo.toml  README.md  test_completion.sh
src/: completion.rs  main.rs  user_input.rs
src/commands/: cd.rs  echo.rs  external.rs  mod.rs  pwd.rs  type_cmd.rs  utils.rs
